# LDPC

./: .gitignore  CMakeLists.txt  LDPC.sln  README.md
Include/: GF.h  GFLinAlg.h  NBLdpcCodec.h
LDPC/: 1024_512_3.ldspec  15_10_3.ldspec  GF.cpp  GFLinAlg.cpp  LDPC.vcxproj  LDPC.vcxproj.filters  N96.ldspec  NBLdpcBuilder.cpp  NBLdpcBuilder.h  NBLdpcCodec.cpp  NBLdpcDecoder.cpp  NBLdpcDecoder.h  testbed.cpp
